# leapfrog

./: .Rbuildignore  .gitattributes  .gitignore  .lintr  404.html  CPPLINT.cfg  DESCRIPTION  LICENSE  LICENSE-text.html  Makefile  NAMESPACE  NEWS.md  README.Rmd  README.md  authors.html  configure  frogger.Rproj  index.html  pkgdown.yml  projection_parameters_child.rds  sitemap.xml
.github/workflows/: R-CMD-check.yaml  c-interface.yaml  leapfrog-py-deploy.yaml  leapfrog-py-test.yaml  model-output-equality.yaml  pkgdown.yaml  standalone-model.yaml  test-coverage.yaml  valgrind.yaml
R/: RcppExports.R  catch-routine-registration.R  file-structure.R  frogger-package.R  generate_cpp.R  generate_cpp_TMB_new.R  generate_cpp_validation.R  read-spectrum-files.R  read-spectrum.R  read_spectrum.R  run_model.R  spectrum-inputs-paeds.R  spectrum-inputs.R  spectrum_inputs.R  spectrum_inputs_paeds.R  util.R  util_assert.R  zzz.R
articles/: development.html  index.html  variables.html
c_interface/: CMakeLists.txt  README.md  build_dll.sh  c_interface.cpp
cpp_generation/: .gitignore  README.md  pyproject.toml
cpp_generation/modelSchemas/: FullModel.json  GlobalStateSpace.json  ModelVariants.json
cpp_generation/modelSchemas/configs/: DpConfig.json  FtConfig.json  HaConfig.json  HcConfig.json  SpConfig.json
cpp_generation/src/: main.py
cpp_generation/src/utils/: concepts.py  config.py  delphi.py  general.py  state_space.py
cpp_generation/templates/: adapter_mixer.j2  concepts.j2  config.j2  config_mixer.j2  header.j2  model_variants.j2  state_space.j2  state_space_mixer.j2  template_utils.j2
cpp_generation/templates/c_interface/: c_adapters.j2
cpp_generation/templates/cpp/: config.j2  config_mixer.j2  state_space.j2  state_space_mixer.j2
cpp_generation/templates/cpp/c_interface/: c_adapters.j2  c_types.j2
cpp_generation/templates/cpp/cpp_interface/: cpp_adapters.j2  hdf5_utils.j2
cpp_generation/templates/cpp/py_interface/: py_adapters.j2
cpp_generation/templates/cpp/r_interface/: r_adapters.j2
cpp_generation/templates/cpp_interface/: cpp_adapter.j2  cpp_adapter_mixer.j2  cpp_adapters.j2
cpp_generation/templates/delphi/: LeapfrogInterface.j2
cpp_generation/templates/r_interface/: r_adapter.j2  r_adapter_mixer.j2  r_adapters.j2
cpp_interface/: .gitignore  CMakeLists.txt  README.md  simulate_model.cpp
delphi/: GBFixedArray.pas  LeapfrogInterface.pas  README.md
docs/: development.Rmd  variables.Rmd
images/: workflow.drawio
inst/cpp_generation/: generate.R  model_input.csv  model_input.hpp.in  model_input_TMB_new.hpp.in  model_output.csv  model_output.hpp.in  parameter_types.hpp.in  state_saver_types.hpp.in  state_types.hpp.in
inst/fit_model/: .gitignore  Makefile.in  README.md  configure  fit_model.cpp  profile_gperftoools  profile_perf  profile_valgrind
inst/include/: README.md  child_art_by_age.hpp  child_model_simulation.hpp  code.h  code.hpp  consts.hpp  demographic_projection.hpp  frogger.hpp  general_demographic_projection.hpp  hiv_demographic_projection.hpp  intermediate_data.hpp  leapfrog-py.hpp  leapfrog-raw.h  leapfrog.hpp  leapfrog_py.hpp  model.hpp  model_input.hpp  model_interface.hpp  model_output.hpp  model_runner.hpp  model_simulation.hpp  model_variants.hpp  options.hpp  parameter_types.hpp  parameters.hpp  population_adjustment.hpp  project_year.hpp  r_utils.hpp  serialize_eigen.hpp  state_saver.hpp  state_space.hpp  state_types.hpp  tmb_utils.hpp  typedefs.hpp  types.hpp  utils.hpp
inst/r_interface/: model_input.hpp  model_input.hpp.in  model_input.yml  model_output.hpp  model_output.hpp.in  (+1 more)
leapfrog/: .Rbuildignore  README.Rmd  README.md
leapfrog-py/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  pyproject.toml
leapfrog-py/scripts/: benchmark.py  create_model_output.py
leapfrog-py/src/: main.cpp
leapfrog-py/src/interface/: interface.cpp
leapfrog-py/src/leapfrog/: interface.cpp
leapfrog-py/src/leapfrog_py/: __about__.py  __init__.py  _core.pyi  leapfrog_py.py  utils.py
leapfrog-py/tests/: __init__.py  test_frogger.py  test_leapfrog.py  test_leapfrog_py.py  test_utils.py
leapfrogr/: .Rbuildignore  .lintr  DESCRIPTION  NAMESPACE  README.Rmd  README.md
man/: adder.Rd  beers_open_ended.Rd  dp_read_anc_testing.Rd  frogger_input_name_mapping.Rd  generate_input_interface.Rd  generate_output_interface.Rd  generate_parameter_types.Rd  generate_state_saver_types.Rd  generate_state_types.Rd  get_data_by_struct.Rd  get_time_slice.Rd  group_list_of_lists.Rd  prepare_hc_leapfrog_projp.Rd  prepare_leapfrog_demp.Rd  prepare_leapfrog_parameters.Rd  read_dp.Rd  run_model.Rd  run_model_from_state.Rd  run_model_single_year.Rd  run_wlhiv_births.Rd
r-package/: .Rbuildignore  DESCRIPTION  Makefile  NAMESPACE  README.Rmd  README.md  frogger.Rproj
reference/: adder.html  beers_open_ended.html  deserialize_tensor_to_r.html  dp_read_anc_testing.html  frogger_input_name_mapping.html  generate_input_interface.html  generate_output_interface.html  generate_parameter_types.html  generate_state_saver_types.html  generate_state_types.html  get_time_slice.html  group_list_of_lists.html  index.html  list_model_configurations.html  pipe.html  prepare_hc_leapfrog_projp.html  prepare_leapfrog_demp.html  prepare_leapfrog_parameters.html  prepare_leapfrog_projp.html  process_parameters_to_cpp.html  process_parameters_to_r.html  process_pjnz.html  read_parameters.html  run_model.html  run_model_from_state.html  run_model_single_year.html  save_parameters.html  serialize_r_to_tensor.html
scripts/: benchmark  benchmark.md  compare_delphi.R  create_test_data.R  generate  read_spectrum.R  run_model.R  spectrum-inputs-paeds.R  spectrum-inputs.R  spectrum_inputs_paeds.R  update_standalone_data  update_standlone_data
src/: ListBuilder.h  Makevars  Makevars.win  RcppExports.cpp  code.cpp  frogger.cpp  leapfrogR.cpp  model_output.hpp  model_outputs.yml  model_setup.cpp  model_setup.h  model_setup.hpp  test-header.cpp  test_helpers.cpp  tmp.def
tests/: NAMESPACE
vignettes/: development.Rmd  integration_workflow.Rmd  leapfrog.Rmd  variables.Rmd
(+384 files in other folders)
