[project]
name = "leapfrog-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mantra", email = "mantrakusumgar@outlook.com" }
]
requires-python = ">=3.8"
dependencies = [
    "deepdiff>=8.4.2",
    "h5py>=3.11.0",
    "numpy>=1.24.4",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
build.verbose = false
cmake.build-type = "Release"
install.strip = true

[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=1.3.2"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "docopt>=0.6.2",
    "pytest>=8.3.5",
]
