[project]
name = "leapfrog-py"
version = "1.0.0"
description = "Python interface for Leapfrog model"
readme = "README.md"
authors = [
    { name = "Mantra", email = "mantrakusumgar@outlook.com" },
    { name = "Rob Ashton", email = "robertashton94@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "h5py>=3.11.0",
    "numpy>=1.24.4",
]

[project.urls]
Documentation = "https://github.com/mrc-ide/leapfrog#readme"
Issues = "https://github.com/mrc-ide/leapfrog/issues"
Source = "https://github.com/mrc-ide/leapfrog"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
build.verbose = false
cmake.build-type = "Release"
install.strip = true

[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=1.3.2"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "deepdiff>=8.4.2",
    "docopt>=0.6.2",
    "pytest>=8.3.5",
]

# Needed for full C++17 support on macOS
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
